--- a/.travis.yml
+++ b/.travis.yml
@@ -1,25 +1,31 @@
 language: php
 
-php:
-  - 5.3
-  - 5.4
-  - 5.5
-  - 5.6
+sudo: false
+
+cache:
+  directories:
+    - "$HOME/.composer/cache/files"
 
 env:
-  - SYMFONY_VERSION=2.6.*
-  - SYMFONY_VERSION="dev-master symfony/debug:~2.7@dev symfony/http-kernel:~2.7@dev"
+  - COMPOSER_FLAGS="--prefer-stable"
+
+php:
+  - 7.0
+  - 7.1
+
+matrix:
+  include:
+    - php: 7.0
+      env: SYMFONY_VERSION="^3.4"
+    - php: 7.1
+      env: SYMFONY_VERSION="^4.0"
 
 before_script:
-  - composer self-update
-  - composer require symfony/framework-bundle:${SYMFONY_VERSION} --no-update
-  - composer update --no-interaction --prefer-source
+  - if [[ "$SYMFONY_VERSION" != "" ]]; then composer require --no-update symfony/symfony:${SYMFONY_VERSION}; fi
   - ./src/BeSimple/SoapClient/Tests/bin/phpwebserver.sh
   - ./src/BeSimple/SoapClient/Tests/bin/axis.sh
 
-script:
-  - phpunit --coverage-text
+install: COMPOSER_MEMORY_LIMIT="2G" composer update $COMPOSER_FLAGS --prefer-dist
 
-matrix:
-  allow_failures:
-    - env: SYMFONY_VERSION="dev-master symfony/debug:~2.7@dev symfony/http-kernel:~2.7@dev"
+script:
+  - ./vendor/bin/phpunit
