--- a/src/BeSimple/SoapBundle/composer.json
+++ b/src/BeSimple/SoapBundle/composer.json
@@ -20,13 +20,13 @@
         }
     ],
     "require": {
-        "php": ">=5.3.0",
+        "php": ">=7.0",
         "ext-soap": "*",
         "besimple/soap-common": "0.3.*",
         "besimple/soap-wsdl": "0.3.*",
         "ass/xmlsecurity": "~1.0",
-        "symfony/framework-bundle": "~2.6",
-        "symfony/twig-bundle": "~2.6",
+        "symfony/framework-bundle": "~3.4|~4.0",
+        "symfony/twig-bundle": "~3.4|~4.0",
         "zendframework/zend-mime": "2.1.*"
     },
     "suggest": {
